--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
     --bg: #112B3C;
     --bg2: #EEF1FF;
     --z1: 5000;
+    --dg: linear-gradient(180deg, rgba(17,43,60,1) 25%, rgba(23,99,2,1) 100%);
 }
 * {
     padding: 0;
@@ -27,11 +28,11 @@ body {
 
 .container {
     background-color: var(--bg);
-    min-width: 100%;
+    min-width: 100vw;
     display: grid;
     color: var(--fn);
     overflow: hidden;
-    width: 800px;
+    user-select: none;
 }
 
 .flex {
@@ -45,8 +46,8 @@ body {
 }
 
 .header {
-    cursor: pointer;
     width: 100vw;
+    position: fixed;
 }
 
 .header__navbar {
@@ -59,52 +60,53 @@ body {
     width: 50px;
 }
 
-.navbar__menu-home > p {
+.navbar__menu-home > a {
     font-weight: 900;
     font-size: 1.2rem;
     padding-left: 0.3rem ;
+    text-decoration: none;
+    color: var(--bg2);
 }
 
 .navbar__menu-home {
     padding-left: 1.5rem;
     padding-right: 3rem;
+    cursor: pointer;
 }
 
-.navbar__menu-option {
-    width: 100px;
-}
-
-.navbar__menu-option > p {
-    font-size: 1rem;
+.navbar__menu-option > a {
+    font-size: 1.1rem;
     font-weight: 600;
     padding: 0.7rem;
+    text-decoration: none;
+    color: var(--fn1);
 }
 
 .navbar__car-items {
-    padding-right: 2rem;
+    padding-right: 3rem;
+    cursor: pointer;
 }
 .navbar__car-items i {
     font-size: 1.4rem;
     }
 
 .navbar__car-items section {
-    padding-right: 3rem;
+    padding-right: 2rem;
     z-index: var(--z1);
 }
 
 .body__home-screen1 {
     display: grid;
     grid-template-columns: 1fr 0.5fr;
-    padding: 2.5rem;
+    padding: 6rem 2.5rem;
     margin: 0 auto;
 }
 
 .home__details {
     align-items: center;
     gap: 1rem;
-    padding: 1rem;
     margin: 0 auto;
-    max-width: 80%;
+    padding-right: 1rem;
 
     font-size: 1rem;
     color: var(--fn1);
@@ -129,17 +131,18 @@ body {
 
 .home__details-item-buttons button {
     width: 6.3rem;
-    height: 3rem;
     color: var(--fn);
     font-weight: bold;
+    margin: 10px 0 0 15px;
+
     border-radius: 3px;
     cursor: pointer;
-    margin: 10px 0 0 15px;
+    
 }
 
 .home__details-item-buttons button:nth-child(2) {
     margin-left: -0.1rem;
-    border: white;
+    border: none;
     background-color: var(--fn3);
     height: 3.5rem;
     width: 6.5rem;
@@ -157,17 +160,92 @@ body {
 .home__products {
     background-color: var(--fn2);
     padding-top: 150px;
-    margin-top: -130px;
+    margin: -130px 30px 0 0;
 }
 
 .home__products > img {
-    width: 450px;
+    width: 400px;
     margin: 0 auto;
+
+    cursor: pointer;
+}
+
+.body__products {
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.product__search {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem;
+    gap: 1rem;
+}
+
+.product__search > section {
+    height: auto;
+    padding: 0.5rem;
+    
+}
+
+.product__search-categories {
+    border-left: 2px solid var(--fn2);
+    font-size: 1rem;
+    text-align: center;
+    padding: 1.2rem;
+
+    cursor: pointer;
+}
+
+.product__search-categories:nth-child(1) {
+    border-left: none;
+}
+
+.product__search section > p {
+    padding: 1rem;
+}
+
+.product__details {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    padding: 2rem 1rem;
+
+}
+
+.product__details-img-details {
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.product__details-img {
+    background: var(--dg);
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 2rem;
+
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.product__details-img img {
+    width: 300px;
+}
+
+.product__details-img-details-title {
+    font-size: 1.2rem;
 }
 
 
 
 
-.product__details-img img {
-    width: 400px;
+
+.color__background {
+    background-color: var(--bg2);
+     /* container, */
+}
+.color__fonts {
+    color: var(--fn3);
+    /* container, menu-home-store, navbar__menu-option, navbar__menu-option, home__details-item, */
 }
