--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -328,3 +328,126 @@ html {
     background: var(--bg);
     opacity: 0.98;
 }
+
+
+/* -----------css javascript------------- */
+
+/* seccion general de div class products */
+.products *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.products img{
+    width: 100%;
+    display: block;
+}
+
+/* seccion del boton de add to cart */
+.btn {
+    padding: 10px, 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.btn__add,
+.btn__buy {
+    background-color: lightblue;
+    width: 100%;
+    padding: 0.5rem;
+}
+/* seccion de div class container */
+
+.div__container{
+    padding: 1rem;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+/* seccion de div class products */
+
+.products{
+    display: grid;
+    gap: 1rem;
+
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.product {
+    background-color: red;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: var(--bgft);
+    display: flex;
+    flex-direction: column;
+}
+
+/* contenido del carrito */
+
+.contentCart {
+    height: calc(100vh - 50px);
+    width: 30vw;
+    top: 60px;
+    right: 0;
+    position: fixed;
+    background-color: var(--bgft);
+    border-radius: 1rem;
+    padding: 1rem;
+
+    transform: translate(100%);
+    transition: transform 0.5s;
+}
+
+.contentCart__show {
+    transform: translate(0);
+}
+
+.cartProduct {
+    height: 80%;
+    background-color: red;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    padding: 0.5rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    overflow-y: scroll;
+}
+
+/* contenido productos agregados al carrito */
+
+.cartProduct .product {
+    background-color: rgb(36, 36, 102);
+    flex-direction: row;
+    gap: 1rem;
+    text-align: left;
+    justify-content: space-between;
+}
+
+.cartProduct .product .product__im {
+    width: 30%;
+}
+
+.cartProduct .product .product_options {
+    display: flex;
+    flex-direction: column;
+}
+
+/* total del carrito */
+.cartTotal {
+    height: 20%;
+    background-color: green;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
