--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -386,13 +386,13 @@ html {
 
 .products{
     display: grid;
-    gap: 1rem;
+    gap: 0.5rem;
 
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .product {
-    padding: 1rem;
+    padding: 0.2rem;
     border-radius: 1rem;
     background-color: var(--bgft);
     display: flex;
@@ -401,12 +401,17 @@ html {
     justify-content: center;
 }
 
+.product__img {
+    width: 50%;
+}
+
 .product__info {
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    gap: 0.4rem;
 }
 
 .product_options {
@@ -414,7 +419,7 @@ html {
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.4rem;
 }
 
 /* contenido del carrito */
