--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -352,6 +352,31 @@ html {
     opacity: 0.98;
 }
 
+.bx-shopping-bag{
+    font-size: 2rem;
+    cursor: pointer;
+
+    position: relative;
+}
+
+.cartAmount{
+    position: absolute;
+    display: inline-block;
+
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    bottom: -7px;
+    right: -7px;
+
+    background-color: #000;
+    color: #fff;
+    font-size: 0.5rem;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 5px;
+}
+
 /* seccion del boton de add to cart */
 
 .product_options {
