Terminacion del Responsive (Heri)

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -580,8 +580,8 @@ html {
     }
 
 
-    .cartProduct {
-        height: 70%;
+    .contentCart {
+        height: 90vh;
     }
 
     .contentCart {
