--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -137,6 +137,7 @@ html {
 
 .home__details-item-info p:nth-child(3) {
     font-size: 2rem;
+    padding-top: 0.5rem ;
     animation: price linear 3s infinite;
 }
 
@@ -147,7 +148,7 @@ html {
 }
 
 .home__details-item-buttons {
-    padding: 1.5rem 0 0 1.5rem;
+    padding: 1.2rem 0 0 2.5rem;
 }
 
 .home__details-item-buttons button {
@@ -319,6 +320,11 @@ html {
     color: var(--fn1);
 }
 
+.footer__information:nth-child(2) p,
+.footer__information:nth-child(3) p,
+.footer__information:nth-child(4) p{
+    cursor: pointer;
+}
 
 .footer__information-social a {
     color: var(--fn1);
@@ -489,19 +495,24 @@ html {
     border-top-right-radius: 1rem;
     padding: 1rem;
     margin-top: 0.2rem;
-    position: relative;
 
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    position: relative;
 
     overflow-y: scroll;
 }
 
 .cartProductempty {
     height: 100%;
+    width: 90%;
     align-items: center;
     justify-content: center;
+    position: absolute;
+
+    top: -30px;
+    z-index: var(--z1);
 }
 
 /* contenido productos agregados al carrito */
@@ -608,7 +619,10 @@ html {
 @media(max-width: 400px) {
     .body__home-screen1 {
         grid-template-columns: 1fr 1fr;
-        padding: 1rem 0rem 4.5rem 1rem;
+        padding: 1rem 0rem 4rem 1rem;
     }
+
+    .home__details-item-info h1{
+        font-size: 2.1rem;}
     
 }
